Removed the use of var. Added check in lint for the use of var. If there is a use of var, then throw a lint error
Updated openapi documentation to reflect the requirements of body in two endpoints and the possible status codes in all endpoints. renamed documentation and added authorization spec. added description and urls for test and prod.

Added a new component for a bad request with no body.

Removed a duplicate test in integration testing and also added better naming to all integration tests.
